--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^5.1.0",
     "yup": "^1.4.0"
