--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^5.1.0",
+    "toaster": "^0.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
